2018-08-19  Dirk Eddelbuettel  <edd@debian.org>

	* tests/hmacTest.R: Added raw test
	* tests/hmacTest.Rout.save: Updated reference output accordingly

	* tests/raw.R: Added test for 'raw' vector input to sha1()

	* R/sha1.R: Removed no longer needed #nocov tags

	* tests/digestTest.Rout.save: Updated one reference output

2018-06-30  Dirk Eddelbuettel  <edd@debian.org>

	* tests/crc32.R: Added test for crc32 and old versus new formats
	* tests/raw.R: Added small test file for raw tests

2018-06-29  Dirk Eddelbuettel  <edd@debian.org>

	* R/init.R: Provide option 'digestOldCRC32Format' which if TRUE
	returns without zero padding which can be shorter than eight bytes
	* R/digest.R: If crc32 selected and option set, return in old format
	* man/digest.Rd: Document new option

2018-06-28  Dirk Eddelbuettel  <edd@debian.org>

	* src/digest.c (digest): Change print format for crc32 to always
	return eight characters and no longer drop leading zeros (thanks to
	Henrik Bengtsson for the heads-up)

2018-06-21  Dirk Eddelbuettel  <edd@debian.org>

	* tests/sha1Test.R: Do not run test using serialize() as its output
	always reflects the R version used (thanks, Radford Neal)

2018-01-29  Dirk Eddelbuettel  <edd@debian.org>

	* src/sha2.c: Comment-out three unused 'const static' variables

2018-01-28  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Date, Version): Release 0.6.15

	* R/sha1.R (sha1.POSIXlt): Unclass POSIXlt objects as suggested by
	Kurt Hornik to accomodate R-devel changes

	* tests/sha1Test.R: Condition one sha1 test seemingly affected by
	R-devel serialization changes to run only with R < 3.5.0

2018-01-21  Thierry Onkelinx  <thierry.onkelinx@inbo.be>

	* sha1() gains an `algo` argument
	* sha1() handles raw class

2018-01-14  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Date, Version): Release 0.6.14

	* man/AES.Rd: Use https for nist.gov reference
	* man/digest.Rd: Idem
	* man/hmac.Rd: Idem
