@@ -169,11 +169,12 @@ cf83e1357eefb8bdf1542850d66d8007d620e4050b5715dc83f4a921d36ce9ce47d0d13c5d85f2b0
 > sha1 <- digest("abc", algo="sha1", serialize=FALSE)
 > stopifnot(identical(sha1, "a9993e364706816aba3e25717850c26c9cd0d89d"))
 > 
->                                         # example of a digest of a standard R list structure
-> cat(digest(list(LETTERS, data.frame(a=letters[1:5],
-+                                     b=matrix(1:10,
-+                                     ncol=2)))), "\n")
-a118afecaa144a3ef45565ecf7e04c5e 
+> ## This one seems to give slightly different output depending on the R version used
+> ##
+> ##                                      # example of a digest of a standard R list structure
+> ## cat(digest(list(LETTERS, data.frame(a=letters[1:5],
+> ##                                     b=matrix(1:10,
+> ##                                     ncol=2)))), "\n")
 > 
 > ## these outputs were calculated using xxh32sum
 > xxhash32Input <-
@@ -296,4 +297,4 @@ f1233fcd
 > 
 > proc.time()
    user  system elapsed 
-  0.372   0.590   0.168 
+  0.368   0.482   0.181 
